<resources>
    <string name="app_name">My Pets Phuket</string>


    <string name="menu_home">Home</string>
    <string name="menu_doctor">Doctors</string>
    <string name="menu_hospital">Hospitals</string>
    <string name="menu_pet_shop">Pet Shops</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_emergancy">Emergancy</string>
    <string name="menu_pet_service">Pets Services</string>
    <string name="menu_myappointments">My Appointment</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="address_bullet">\u2022 Address : </string>
    <string name="time_bullet">\u2022 Time : </string>
    <string name="doctor_bullet">\u2022 Doctor : </string>
    <string name="bullet">\u2022 Time remain</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="toolbar_size">30dp</string>

    <string name="Adout_Us_name"> Mongkonrat Noosuwan</string>
    <string name="Adout_Us_phone">(+66)822828303</string>
    <string name="Adout_Us_email">5635512090@psu.ac.th</string>
    <string name="Adout_Us_copyright">Copyright © 2019</string>

    <!-- User -->
    <string name="user_name"> Name </string>
    <string name="user_email"> Email </string>
    <string name="user_phone"> Phone Number </string>
    <string name="user_password"> Password </string>

    <!-- Login -->
    <string name="login_phone_email"> Phone Number </string>
    <string name="login_create_account"> Create Account </string>
    <string name="_11_00_am_to_1_00_pm">11:00 AM to 1.00 PM</string>
    <string name="address_and_time">Address and Time</string>
    <string name="description">Description</string>
    <string name="about">About</string>
    <string name="services">Services</string>
    <string name="services_option">Services Option</string>
    <string name="location">Location</string>
    <string name="service_time">Service time</string>
    <string name="servicetype">Service_type</string>
    <string name="name">Name</string>
    <string name="hospitals">Hospitals</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>


</resources>
