<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <!--  tools:context=".HomeActivity">         -->


            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg"
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <RelativeLayout
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">


                    <TextView
                        android:id="@+id/textGrid"
                        android:text="@string/app_name"
                        android:textSize="34sp"
                        android:textColor="@android:color/white"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>


                <GridLayout
                    android:id="@+id/mainGrid"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:alignmentMode="alignMargins"
                    android:columnCount="2"
                    android:columnOrderPreserved="false"
                    android:padding="14dp"
                    android:rowCount="3">

                    <!-- Row 1 -->

                    <!-- Column 1 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/doctor_card_main"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_doctor" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/menu_doctor"
                                android:textAlignment="center"
                                android:textColor="@color/grey"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <!-- Column 2 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/hospitals_card_main"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_hospital" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/menu_hospital"
                                android:textAlignment="center"
                                android:textColor="@color/grey"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <!-- Row 2 -->

                    <!-- Column 1 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/petshop_card_main"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_petshop" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:text="@string/menu_pet_shop"
                                android:textAlignment="center"
                                android:textColor="@color/grey"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <!-- Column 2 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/appointments_card_main"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_appointments" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/menu_appointments"
                                android:textAlignment="center"
                                android:textColor="@color/grey"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <!-- Row 3 -->

                    <!-- Column 1 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/emergancy_card_main"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_emergency" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/menu_emergancy"
                                android:textAlignment="center"
                                android:textColor="@color/grey"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <!-- Column 2 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/petservice_card_main"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="17dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="85dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_pet_service" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_pet_service"
                                android:textAlignment="center"
                                android:textColor="@color/grey"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </GridLayout>


            </LinearLayout>

</LinearLayout>